# MeeplesShelf

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.yml  scoring-config-feature-gap.md
app/: pyproject.toml
app/alembic/versions/: 001_initial.py  002_add_game_rating_notes.py  003_add_game_image.py  004_add_tags.py  005_add_bgg_id.py  006_game_description_ratings.py  007_session_images_reactions_seal.py  008_add_game_playtime_year.py  009_add_game_bgg_credits.py
app/app/: config.py  dependencies.py  main.py
app/app/models/: __init__.py  game.py  session.py
app/app/routers/: auth.py  bgg.py  export.py  games.py  players.py  sessions.py  stats.py  tags.py
app/app/schemas/: bgg.py  export.py  game.py  pagination.py  player_stats.py  session.py  stats.py  tag.py
app/app/services/: bgg.py  scoring.py  seed.py  stats.py  storage.py
app/tests/: test_bgg_schema.py  test_bgg_service.py  test_game_schema.py  test_player_stats.py  test_scoring.py  test_stats.py  test_tag_schema.py
apps/: Dockerfile  pyproject.toml
apps/alembic/: env.py
apps/alembic/versions/: 002_indexes.py  005_user_auth.py  006_bgg_sync.py  007_social_badges.py  008_remaining_features.py
apps/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
apps/app/middleware/: logging.py
apps/app/models/: __init__.py  badges.py  game.py  session.py  social.py  sync.py  user.py
apps/app/routers/: auth.py  (+10 more)
apps/tests/: test_games.py  test_scoring.py  test_sessions.py
(+197 files in other folders)
